[tool.poetry]
name = "repl_python3_DonutBot-1"
version = "0.1.0"
description = ""
authors = ["AryaJatt <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
praw = "^7.4.0"
pytube = "^11.0.1"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
python-youtube = "^0.8.1"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
